# Advanced_CXX_Task

./: CmakeLists.txt
Task_1/: CMakeLists.txt  main.cpp
Task_1/header/: Group.h  User.h
Task_1/source/: Group.cpp  User.cpp
Task_2/: CmakeLists.txt  TypeList.h  main.cpp
Task_3/: CmakeLists.txt  TypeMap.h  main.cpp
Task_4/: CMakeLists.txt  counter.h  less_than_comparable.h  main.cpp
Task_5/: CMakeLists.txt  Log.cpp  Log.h  main.cpp
Task_6/: CMakeLists.txt  main.cpp
Task_6/header/: Checkpoint.h  TrackBuilder.h  TrackDirector.h
Task_6/source/: TrackBuilder.cpp  TrackDirector.cpp
Task_7/: CMakeLists.txt  Set.cpp  Set.h  main.cpp
Task_8/: Addition.h  CMakeLists.txt  Constant.h  Expression.h  ExpressionFactory.cpp  ExpressionFactory.h  Operator.h  Variable.h  main.cpp
